# tool-ai-os

./: .aider.chat.history.md  .gitignore  ARCHITECTURE.md  PROJECT_STATE.md  Replay_X9HGfeYb.md  TODO.md  VISION.md  proof_connectivity.py  proof_mcp_runtime.py  proof_ollama.py  proof_opencode.py  proof_opendesign.py  proof_runtime.py  pyproject.toml
api/: dependencies.py  main.py
bot/: telegram.py
cli/: main.py
data/: toll.db-shm  toll.db-wal
deployment/: .env.example  ARCHITECTURE.md  BETA_README.md  Caddyfile  DEPLOYMENT.md  ENVIRONMENT.md  README.md  REVERSE_PROXY.md  SECURITY.md  SERVER.md  STATUS.md  backup.sh  toll.service
docs/: KNOWN_GAPS.md  agent-integration-opencode.md  agent-registry.md  brand-dna-v1.md  infrastructure-sprint-report.md  project-truth-source.md  sprint-3.5-report.md  sprint-4-design-review.md  sprint-5.5-cleanup-review.md  sprint-5b-notebooklm-design.md  sprint-5b.2-fixes-report.md  sprint-5c-research-memory-design.md  sprint-6-media-layer-design.md  sprint-6a-execution-plan.md  sprint-6a-model-registry-benchmark-design.md  sprint-7-prompt-intelligence-design.md  sprint-7a-integration-audit.md  sprint-7a-report.md  sprint-7b-architecture-audit.md  sprint-7b-report.md  sprint-7c-report.md  sprint-8-operations-layer-design.md  sprint-8b-report.md  sprint4-report.md  sprint5-design-review.md  sprint5a-report.md  v0.6-architecture-audit.md  zuno-master-context-v1.md
skill/: SKILL.md
tests/: conftest.py  test_api.py
toll/: __main__.py
web/: index.html  manifest.json  package-lock.json  package.json  vite.config.js
(+329 files in other folders)
