[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "toll"
version = "1.0.0"
description = "تول — مساعد شخصي موحد"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
toll = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["toll*", "api*", "cli*", "bot*"]
exclude = [".venv*", "tests*"]
